# sem2lab8

CMakeProject1/: CMakeLists.txt
CMakeProject1/sem2_lab8/: CMakeLists.txt  sem2_lab8.cpp  sem2_lab8.h
