# CMakeList.txt: проект CMake для sem2_lab8; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (sem2_lab8 "sem2_lab8.cpp" "sem2_lab8.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
